// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CityItem /> render Should active CityItem render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      Moscow
    </span>
  </a>
</li>
`;

exports[`<CityItem /> render Should no-active CityItem render correctly 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="#"
    onClick={[Function]}
  >
    <span>
      Moscow
    </span>
  </a>
</li>
`;
